# tetfem.jl

./: README.md
meshes/2D_2x2/: 2x2_mesh_0.vtk  2x2_mesh_1.vtk  2x2_mesh_2.vtk  2x2_mesh_3.vtk  2x2_mesh_4.vtk
meshes/3D_2x2x2/: 2x2x2_mesh_0.vtk  2x2x2_mesh_00.vtk  2x2x2_mesh_1.vtk  2x2x2_mesh_2.vtk
meshes/3D_trelis_2x2x2/: mesh_2x2x2_0.vtk  mesh_2x2x2_1.vtk  mesh_2x2x2_2.vtk
src.cpp/: CMakeLists.txt  readvtk.cpp  savevtk.cpp  vtklib.h  vtklib_util.cpp
src.jl/: Adjoint.jl  BuildDOFIndex.jl  ComputeP3_alternate.jl  Convergence.jl  Element.jl  FEM.jl  Fekete.jl  FlemMain.jl  Hessian.jl  K_p2triangle.npz  K_p3tetrahedra.npz  K_p3triangle.npz  Mesh.jl  Nodes.jl  PolySpace.jl  RST_p2tetrahedra.npz  RST_p3tetrahedra.npz  ResolutionAnalysis.jl  ResolutionTools.jl  RunSimulation2d.jl  RunSimulation3d.jl  SEM.jl  Source.jl  TetFemConfig.jl  TetrahedraConstants.jl  TimeStepping.jl  TimeStepping1d.jl  Wave1D.jl  global_numbering.py  p3_phi_rst.jld
